# Shipwright

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  REFERENCE.md  SPEC.md  TASKS.md  apm-competitive-analysis.md  handoff.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ship-alpha-ui-action-plan.md  ship-studio-spec.md  shipwright-vision-architecture(1).md  shipwright-vision-architecture.md  test-regex.ts  tsconfig.json  vibe.js  vitest.config.ts
apps/mcp/: Cargo.toml  build.rs
apps/mcp/src/: http.rs  inbox_routing_tests.rs  lib.rs  logging.rs  main.rs  network_client.rs  project_skills_tests.rs  requests.rs  resource_resolver.rs  resource_tests.rs  resources.rs  server.rs  server_tests.rs  skill_file_tests.rs  studio_server.rs  studio_server_tests.rs  util.rs
apps/mcp/src/push/: claude_channel.rs  mcp_notification.rs  mod.rs  push_integration_tests.rs
apps/mcp/src/requests/: dispatch.rs  job.rs  mesh.rs  mod.rs  planning.rs  project.rs  workspace.rs
apps/mcp/src/server/: event_sink.rs  handler.rs  mod.rs  notification_relay.rs  notification_relay_tests.rs  tool_gate.rs
apps/mcp/src/tools/: adr.rs  agent.rs  dispatch.rs  event.rs  event_tests.rs  events.rs  git_info.rs  git_info_tests.rs  job.rs  mesh.rs  mod.rs  notes.rs  project.rs  session.rs  session_files.rs  session_files_tests.rs  skills.rs  studio.rs  studio_inbox.rs  studio_push.rs  target.rs  workspace.rs  workspace_ops.rs
apps/mcp/tests/: http_transport.rs  notifications.rs
apps/ship-network/: Cargo.toml
apps/ship-network/src/: connections.rs  lib.rs  main.rs
apps/ship-studio-cli/: Cargo.toml
apps/ship-studio-cli/.ship/: mcp.toml
apps/ship-studio-cli/src/: add.rs  add_from.rs  add_from_tests.rs  add_from_write.rs  agent.rs  agent_config.rs  audit.rs  auth.rs  cli.rs  cloud.rs  commands.rs  compile.rs  config.rs  convert.rs  convert_github.rs  convert_mcp.rs  convert_tests.rs  daemon.rs  dep_skills.rs  dep_skills_tests.rs  dep_skills_tests_resolve.rs  diff.rs  events_cmd.rs  help_topics.rs  hook.rs  import.rs  init.rs  init_from_url.rs  install.rs  job.rs  loader.rs  loader_tests.rs  logging.rs  main.rs  mcp.rs  mcp_serve.rs  mode.rs  network_serve.rs  paths.rs  permissions.rs  (+9 more)
apps/ship-studio-cli/src/compile/: agent.rs  mcp_allowlist.rs  mod.rs  output.rs  tests.rs  tests_agent.rs  tests_extra_skills.rs  tests_worktree.rs
apps/ship-studio-cli/src/permissions/: mod.rs  tests.rs
apps/ship-studio-cli/src/top/: mod.rs  state.rs  ui.rs
apps/ship-studio-cli/src/validate/: mod.rs  tests.rs
apps/ship-studio-cli/src/vars/: commands.rs  mod.rs  schema.rs  state.rs
apps/ship-studio-cli/src/view/: actions.rs  data.rs  input.rs  input_crud.rs  mod.rs  modal.rs  nav.rs  render.rs  render_config.rs  render_docs.rs  render_events.rs  render_settings.rs  render_workflow.rs  theme.rs
apps/ship-studio-cli/src/view/render/: adrs.rs  agents.rs  events.rs  jobs.rs  mcp_servers.rs  mod.rs  notes.rs  settings.rs  (+2 more)
apps/ship-studio-cli/tests/: cli.rs  mcp_bridge_e2e.rs  registry_e2e.rs  registry_e2e_deps.rs
apps/ship-studio-cli/tests/fixtures/: mod.rs
apps/shipd/: Cargo.toml
apps/shipd/src/: actor_api.rs  connections.rs  handler.rs  human_webhook.rs  lib.rs  main.rs  project_api.rs  pty_handler.rs  pty_handler_tests.rs  rest_api.rs  runtime_api.rs  server.rs  server_tests.rs
apps/shipd/src/project_api/: agents_skills.rs  git.rs  mod.rs  session_files.rs  tests.rs
apps/shipd/src/supervisor/: adapters.rs  dispatch_handlers.rs  dispatch_pipeline.rs  helpers.rs  job_dispatch.rs  job_pipeline.rs  mod.rs  terminal_launcher.rs  tests_job_dispatch.rs
archive/cli-v0/: Cargo.toml  build.rs
archive/cli-v0/src/: lib.rs
core/runtime/: Cargo.toml
core/runtime/src/: config.rs  events.rs  lib.rs  migration.rs  project.rs  state_db.rs  workspace.rs
core/runtime/src/agents/: config.rs  permissions.rs  rule.rs  skill.rs
core/runtime/src/templates/: MCP.toml  PERMISSIONS.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: app.rs  lib.rs  main.rs  surface.rs
crates/core/compiler/: Cargo.toml  PROVIDER-GAP-ANALYSIS.md  PROVIDERS.md
crates/core/compiler/src/: agent_parser.rs  events.rs  jsonc.rs  lib.rs  lockfile.rs  manifest.rs  manifest_tests.rs  matrix.rs  permissions.rs  resolve.rs  schema_drift_tests.rs  schemas.rs  vars.rs
crates/core/compiler/tests/: invariants.rs
crates/core/runtime/: Cargo.toml  LICENSE
crates/core/runtime/migrations/: 0001_initial.sql  0002_event_log_headroom.sql  0002_v020.sql  0003_session_drain.sql  0004_workspace_tmux.sql  0005_drop_agent_config_tables.sql
crates/core/runtime/src/: catalog.rs  config.rs  events.rs  fs_util.rs  hooks.rs  lib.rs  log.rs  migration.rs  project.rs  security.rs  skill_paths.rs  skill_vars.rs  state_db.rs  workspace.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  requests.rs  server.rs
crates/modules/project/: Cargo.toml
crates/modules/project/src/: demo.rs  lib.rs  plugin.rs  project.rs  tests.rs
crates/plugins/ghost-issues/: Cargo.toml
crates/plugins/ghost-issues/src/: lib.rs
crates/plugins/time-tracker/: Cargo.toml
crates/plugins/time-tracker/src/: lib.rs
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/capabilities/: default.json
crates/ui/src-tauri/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
example/projects-e2e/: .gitignore  Cargo.toml  README.md  feature-matrix.md  reset.sh
example/projects-e2e/e2e/: project-features.sh
example/projects-e2e/scripts/: worktree-smoke.sh
example/projects-e2e/tests/: agent_config.rs  branch_config.rs  entity_cli.rs  git_hook.rs  git_workflow.rs  project_registry.rs  workflow.rs  workspace_lifecycle.rs
example/projects-e2e/tests/helpers/: mod.rs
examples/e2e/: Cargo.toml
examples/e2e/checks/: project-features.sh
examples/e2e/src/: lib.rs
examples/e2e/tests/: branch_config.rs  compiler_matrix.rs  entity_cli.rs  git_hook.rs  git_workflow.rs  workflow.rs  workspace_lifecycle.rs
examples/e2e/tests/helpers/: mod.rs
(+2048 files in other folders)
