[workspace]
members = [
    "core/cli-framework",
    "core/mcp-framework",
    "core/runtime",
    "crates/modules/project",
    "crates/modules/git",
    "crates/cli",
    "crates/mcp",
    "crates/plugins/time-tracker",
    "crates/plugins/ghost-issues",
    "crates/ui/src-tauri",
    "examples/e2e",
]
resolver = "2"
