[workspace]
members = [
    "crates/core/cli-framework",
    "crates/core/compiler",
    "crates/core/mcp-framework",
    "crates/core/runtime",
    "crates/modules/project",
    "crates/modules/git",
    "apps/cli",
    "apps/mcp",
    "crates/plugins/time-tracker",
    "crates/plugins/ghost-issues",
    "apps/desktop/src-tauri",
    "examples/e2e",
]
resolver = "2"
