[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ship-mcp"
path = "src/main.rs"

[lib]
name = "mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-framework = { path = "../../crates/core/mcp-framework" }
async-trait = "0.1"
runtime = { path = "../../crates/core/runtime" }
ship-module-project = { path = "../../crates/modules/project" }
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.13"
