[package]
name = "ship-studio-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cli-framework = { path = "../../crates/core/cli-framework" }
compiler = { path = "../../crates/core/compiler" }
runtime = { path = "../../crates/core/runtime" }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
