[package]
name = "ship-studio-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mcp = { path = "../mcp" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
cli-framework = { path = "../../crates/core/cli-framework" }
compiler = { path = "../../crates/core/compiler" }
runtime = { path = "../../crates/core/runtime" }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
rmcp = { version = "0.16.0", features = [
    "client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
getrandom = "0.2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
unstable = ["ratatui", "crossterm", "mcp/unstable"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
rmcp = { version = "0.16.0", features = [
    "server", "transport-streamable-http-server",
] }
axum = { version = "0.8", features = ["http1", "tokio"] }
tokio-util = { version = "0.7", features = ["full"] }
schemars = "1"
