[package]
name = "shipd"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "shipd"
path = "src/lib.rs"

[[bin]]
name = "shipd"
path = "src/main.rs"

[dependencies]
runtime = { path = "../../crates/core/runtime" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["http1", "tokio"] }
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

[features]
unstable = ["runtime/unstable"]

[dev-dependencies]
tempfile = "3"
