[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
logic = { path = "../logic" }
time-tracker = { path = "../plugins/time-tracker" }
ghost-issues = { path = "../plugins/ghost-issues" }
anyhow = "1.0"
chrono = "0.4"
