[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
runtime = { path = "../runtime" }
ship-module-git = { path = "../modules/git" }
ship-module-project = { path = "../modules/project" }
time-tracker = { path = "../plugins/time-tracker" }
ghost-issues = { path = "../plugins/ghost-issues" }
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
