[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cli-framework = { path = "../../core/cli-framework" }
runtime = { path = "../../core/runtime" }
ship-module-git = { path = "../modules/git" }
ship-module-project = { path = "../modules/project" }
time-tracker = { path = "../plugins/time-tracker" }
ghost-issues = { path = "../plugins/ghost-issues" }
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
