[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logic = { path = "../logic" }
anyhow = "1.0"
