[package]
name = "examples-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
runtime = { path = "../../core/runtime" }
ship-module-git = { path = "../../crates/modules/git" }
ship-module-project = { path = "../../crates/modules/project" }
anyhow = "1.0"
tempfile = "3.3"
serde_json = "1.0"
toml = "0.8"

[[test]]
name = "workflow"
path = "tests/workflow.rs"

[[test]]
name = "agent_config"
path = "tests/agent_config.rs"

[[test]]
name = "git_hook"
path = "tests/git_hook.rs"

[[test]]
name = "branch_config"
path = "tests/branch_config.rs"

[[test]]
name = "git_workflow"
path = "tests/git_workflow.rs"

[[test]]
name = "project_registry"
path = "tests/project_registry.rs"

[[test]]
name = "workspace_lifecycle"
path = "tests/workspace_lifecycle.rs"

[[test]]
name = "compiler_matrix"
path = "tests/compiler_matrix.rs"

[[test]]
name = "entity_cli"
path = "tests/entity_cli.rs"
