[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
publish = false

[dependencies]
compiler = { path = "../compiler", features = ["specta"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
home = "0.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
ulid = "1"
walkdir = "2.3"
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"] }
tempfile = "3.3"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"

[features]
unstable = []

[dev-dependencies]
