[package]
name = "ship-module-project"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime = { path = "../../../core/runtime" }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
specta = "2.0.0-rc.22"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3.3"
