[package]
name = "time-tracker"
version = "0.1.0"
edition = "2024"

[lib]
name = "time_tracker"
path = "src/lib.rs"

[dependencies]
runtime = { path = "../../../core/runtime" }
ship-module-project = { path = "../../modules/project" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
