[package]
name = "ui"
version = "0.1.0"
description = "Ship Project UI"
authors = ["you"]
edition = "2021"

[[bin]]
name = "ship"
path = "src/main.rs"

[lib]
name = "gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cli = { path = "../../cli" }
mcp = { path = "../../mcp" }
clap = { version = "4.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
logic = { path = "../../logic" }
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
rmcp = "0.16.0"
dirs = "5"
